--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "@gridsome/source-filesystem": "^0.6.2",
     "@gridsome/transformer-remark": "^0.6.4",
-    "gridsome": "^0.7.0"
+    "axios": "^0.23.0",
+    "gridsome": "^0.7.0",
+    "markdown-it": "^12.2.0"
   }
 }
