--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
-#GRIDSOME_API_URL = http://42.240.132.100:1337
-GRIDSOME_API_URL = http://localhost:1337
+#GRIDSOME_API_URL = http://localhost:1337
+GRIDSOME_API_URL = http://42.240.132.100:1337
 DB_USER = root
 DB_PASS = qq669898
